# Node-fm

./: README.md  TUTORIAL.md  package-lock.json  package.json
src/: App.css  App.tsx  main.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src/components/: FolderNode.css  FolderNode.tsx
